--- a/multas-prediction/requirements.txt
+++ b/multas-prediction/requirements.txt
@@ -1,6 +1,8 @@
-Dash==2.0.0
-plotly==5.0.0
-pandas==1.3.0
-numpy==1.21.0
-scikit-learn==0.24.0
-openpyxl==3.0.7
+dash>=2.17,<3
+plotly>=5.20
+pandas>=2.2
+numpy>=1.26
+scikit-learn>=1.4
+openpyxl>=3.1
+gunicorn>=21
+
